Refactor shared components into core library

--- a/GP16Editor/GP16Editor.csproj
+++ b/GP16Editor/GP16Editor.csproj
@@ -71,6 +71,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <ProjectReference Include="..\GP16Editor.Core\GP16Editor.Core.csproj" />
 	  <ProjectReference Include="..\GP16Editor.Models\GP16Editor.Models.csproj" />
 	</ItemGroup>
 
